--- a/app/Resources/views/user/register.html.twig
+++ b/app/Resources/views/user/register.html.twig
@@ -2,20 +2,30 @@
 
 {% block body %}
 
-    <h1>Register</h1>
-    <form method="post">
-        Email:* <br />
-        <input type="text" name="user[email]" /><br />
-        Password:* <br />
-        <input type="password" name="user[password]" /><br />
-        Full Name:* <br />
-        <input type="text" name="user[fullName]" /><br />
-
-        <input type="submit" value="Register!">
-
-        <h3>
-            <a href="{{ path('security_login') }}">Login</a>
-        </h3>
+    <form class="form" method="post">
+        <h3>Register</h3>
+        <label>
+            <p class="label-txt">ENTER YOUR EMAIL</p>
+            <input type="text" name="user[email]" class="form-control" />
+            <div class="line-box">
+                <div class="line"></div>
+            </div>
+        </label>
+        <label>
+            <p class="label-txt">ENTER YOUR PASSWORD</p>
+            <input type="password" name="user[password]" class="form-control" />
+            <div class="line-box">
+                <div class="line"></div>
+            </div>
+        </label>
+        <label>
+            <p class="label-txt">ENTER YOUR FULL NAME</p>
+            <input type="text" name="user[fullName]" class="form-control" />
+            <div class="line-box">
+                <div class="line"></div>
+            </div>
+        </label>
+        <button type="submit">Register</button>
     </form>
 
 {% endblock %}
